--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,7 +15,7 @@
             <li><a href="{% url 'query-history' %}">Query History</a></li>
         </ul>
     </nav>
-    <div class="container">
+    <div class="weather-container">
         {% block content %}{% endblock %}
     </div>
     <script src="{% static 'js/script.js' %}"></script>
